Stopgap before slicing. Make next/tryagain arrows 80% size. Make text smaller.

--- a/style/common.scss
+++ b/style/common.scss
@@ -557,8 +557,8 @@ $modal-image-margin-gap: 10px;
     border: none;
     background: white url("#{$common_root}#{$filename}");
     width: $image_width;
-    height: 147px;
-    font-size: 35px;
+    height: 118px;
+    font-size: 27px;
     &:hover {
       box-shadow: none;
     }
@@ -571,7 +571,10 @@ $modal-image-margin-gap: 10px;
   color: white;
   margin-left: 0px;
   margin-right: 10px;
-  @include k1-image-button('tryagain-arrow.png', 255px);
+  @include k1-image-button('tryagain-arrow-button.png', 204px);
+  .k1 & {
+    text-align: right;
+  }
 }
 
 #continue-button {
@@ -580,7 +583,10 @@ $modal-image-margin-gap: 10px;
   color: white;
   margin-left: 0px;
   margin-right: 10px;
-  @include k1-image-button('next-arrow.png', 214px);
+  @include k1-image-button('next-arrow-button.png', 171px);
+  .k1 & {
+    text-align: left;
+  }
 }
 
 #save-to-gallery-button {
